styles.css
:root{
    font-size: 1.5vw;
    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
    color:whitesmoke;
    --bgcolor:#292929;
    --bgcolorside:#1D1D1D;
    --itemcolor:#616161;
    --itemcolordark:#4d4d4d;
    --speed:200ms;
}
body{
    margin: 0;
    padding: 0;
    background-color: var(--bgcolor);
    overflow-x: hidden;
}
body::-webkit-scrollbar{
    width: 0.25rem;
}
body::-webkit-scrollbar-track{
    background: var(--bgcolor);
}
body::-webkit-scrollbar-thumb{
    background: var(--itemcolor);
}

#spacer{
    width:5vw;
    height:10vh;
}
#navbar{
    position:fixed;
    width:5vw;
    height: 100vh;
    background-color:var(--itemcolor);
    transition: width var(--speed) ease;
}
#navList{
    list-style: none;
    padding: 0;
    margin: 0;
    display: flex;
    flex-direction: column;
    align-items: center;
    height: 100vh;
}
#navItem{
    width: 100%;
    
}
#navItem:last-child{
    margin-top: auto;
}
#navLink{
    display: flex;
    align-items: center;
    height: 5vh;
    text-decoration:none;
}
#navLink:hover{
    transition: width var(--speed) ease;
    filter: grayscale(0%) opacity(1);
    background: var(--itemcolordark);
}
#itemText{
    display: none;
    margin-left:1vw;
}
#svgIcon{
    width: 2vw;
    min-width: 2vw;
    margin: 0 1.5vw;
    fill: whitesmoke;
}
#navbar:hover{
    width: 16vw;
}
#navbar:hover #itemText{
    display: inline;
    
}
span{
    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
    color:whitesmoke;
}
/* END OF NAVBAR START OF LOGO MAIN*/
#main{
    /* margin-left: 5vw; */
    /* width: 120vw; */
    padding-left: 5vw;
}
img{
    border-radius: 50%;
    width: 90px;
    height: 90px;
}

#logo{
    width: auto;
    height: auto;
    vertical-align: middle;
}
.parent-element-to-video {
    overflow: hidden;
}
video {
    max-height: 100%;
    max-width: 1000%;
    min-width: 5px;
    min-height: 5px;
}





/*START OF MAIN BODY*/
#midmain{
    position: absolute;
    top: 50vh;
    left: 50vw;
    transform: translate(-50%,-50%);
    text-align: center;
}
#midPad{
    /* display: flex; */
    height:100vh;
    width: 95vw;
}
#aboutPad{
    height:100vh;
    width: 75vw;
    padding-top: 5vh;
    padding-left: 10vw;
    padding-right: 10vw;
    text-align: center;
    background-color: var(--bgcolorside);
}
/*START OF ABOUT*/
h2{
    font-size:2vh;
}
#info{
    font-size:2vh;
}
/*START OF CONTACT*/
#contactBar{
    display: flex;
    flex-direction:row;
    justify-content: center;
    align-items: center;  
    height: 50vh;
}
#contactInfo{
    width: 50vw;
    padding-left: 10vw;
}

